[project]
name = "reddit-scout"
version = "0.1.0"
description = "Reddit Scout - Automated subreddit monitoring and notification system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcadepy>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/reddit_scout",
    "--cov-report=term-missing",
    "--cov-report=html",
]
